k8s/kube/andes-production/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-andes
  namespace: andes-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-connect-timeout: "600"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/send-timeout: "600"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - andes.osacontrol.com
    - andes.osacontrol.cl
    secretName: letsencrypt-prod
  rules:
  - host: andes.osacontrol.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:        
            name: osa-andes-service
            port: 
              number: 3030
  - host: andes.osacontrol.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: osa-andes-service
            port: 
              number: 3030
